[package]
name = "infratk"
version = "0.1.0"
edition = "2021"

[dependencies]
arboard = "3.6.1"
camino = "1.2.2"
clap = { version = "4.5.60", features = ["derive", "env"] }
git_cmd = "0.6.28"
ignore = "0.4.25"
inquire = "0.9.4"
petgraph = "0.8.3"
regex = "1.12.3"
reqwest = { version = "0.13.2", features = ["json"] }
secrecy = "0.10.3"
tracing = "0.1.44"
tracing-log = "0.2.0"
tracing-subscriber = { version = "0.3.22", features = ["env-filter"] }
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.149"
anyhow = "1.0.102"
tokio = { version = "1.49.0", features = ["macros", "rt-multi-thread"] }
semver = "1.0.27"
home = "0.5.12"
fs-err = "3.3.0"
toml = "1.0.3"

[dev-dependencies]
camino-tempfile = "1.4.1"
